fix menu buttons on mobile

--- a/stylesheets/computer.css
+++ b/stylesheets/computer.css
@@ -11,6 +11,7 @@
       "footer"
    }
   .header {
+    box-shadow: 0 1px 2px #5a5a5a;
     background-color: grey;
     grid-template-areas:"name  navbar-buttons icons" ;                      
     background-color: grey;
