--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -12,6 +12,7 @@
   }
 
   .header {
+    box-shadow: 0 1px 1px #5a5a5a;
     display:grid;
     background-color: grey;
     grid-template-areas:"name           icons"                        
